# PicViewer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite-plugin-pics.js  vite.config.ts
public/api/: scan-pics.json
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FolderSelector.tsx  ImageCard.tsx  ImageGrid.tsx  ImageModal.tsx  MetadataEditor.tsx  SearchBar.tsx  TagEditor.tsx
src/hooks/: useImages.ts
src/services/: localImages.ts  mockTauri.ts  tauri.ts
src/types/: index.ts
